# snail

./: .gitignore  CLAUDE.md  README.md  config.js  index.html  manifest.json  package.json  sw.js
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_v9_stability.py  0002_variant_remap.py  0003_config_mailbox.py  0004_events_notices.py  0005_user_suspend.py  0006_olive_to_lime.py  0007_minigame_race.py  0008_minigame_quiz.py  0009_dropped_foods.py  0010_skin_stage.py  0011_retire_garden.py
backend/app/: main.py  models.py
backend/app/core/: config.py  database.py  deps.py  errors.py  middleware.py  security.py
backend/app/domain/: rules.py
backend/app/modules/: actions.py  admin.py  auth.py  config_service.py  game.py  mailbox.py  migration.py  minigame.py  notices.py  service.py
backend/app/tests/: test_api.py  test_v10.py  test_v12.py  test_v13.py  test_v13_feedback.py  test_v14_account.py  test_v9.py
backend/scripts/: backup.sh
backend/snail_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
css/: components.css  explore.css  home.css  settings.css  shop.css  stats.css  theme.css
docs/: 10차_MVP_구현계획.md  11차_MVP_구현계획.md  12차_MVP_구현계획.md  13차_MVP_구현계획.md  14차_MVP_구현계획.md  1차_MVP_구현계획.md  2차_MVP_구현계획.md  3차_MVP_구현계획.md  4차_MVP_구현계획.md  5차_MVP_구현계획.md  6차_MVP_구현계획.md  7차_MVP_구현계획.md  8~10차_MVP_백엔드_인프라_구현계획_GPT.md  8차_MVP_구현계획.md  9차_MVP_구현계획.md  밸런스_목표곡선_및_원격설정.md
js/: api.js  app.js  db.js  deco.js  dex.js  explore.js  fx.js  game.js  habitat.js  home.js  (+8 more)
(+22 files in other folders)
