[project]
name = "snail-backend"
version = "0.1.0"
description = "Snail 달팽이 키우기 — 서버 권위형 API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "alembic>=1.13",
    "psycopg2-binary>=2.9; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
